# apple2google-calendar-sync

./: .gitignore  README.md  calendar_sync.py  com.user.apple2google-sync.plist  com.user.calendarsync.plist  config.py  pyproject.toml  requirements.txt
apple2google_calendar_sync/: __init__.py  __main__.py  calendar_reader.py  calendar_writer.py  cli.py  config.py  exceptions.py  models.py  state.py  syncer.py  types.py
